<resources>
    <string name="app_name">GYMMANAGER 영수증</string>
    <string name="ok">확인</string>
    <string name="register">등록</string>
    <string name="modify">수정</string>
    <string name="cancel">취소</string>
    <string name="phone_number">전화번호</string>
    <string name="mobile_phone_number">휴대전화</string>
    <string name="dash">-</string>
    <string name="settings">설정</string>
    <string name="send_receipt_via_sms">영수증 SMS 전송</string>
    <string name="issued_receipt">발행 영수증</string>
    <string name="no_issued_receipt">발행된 영수증이 없습니다.</string>

    <string-array name="phone_first_digit_array">
        <item>010</item>
        <item>011</item>
        <item>016</item>
        <item>017</item>
        <item>018</item>
        <item>019</item>
    </string-array>

    <string name="center_info_register">센터 정보 등록</string>
    <string name="modify_center_register_info">센터 등록 정보 수정</string>
    <string name="save_center_register_info">센터 정보를 저장 하시겠습니까?</string>
    <string name="center_register_saved">센터 정보가 등록되었습니다.</string>
    <string name="center_register_cancel">센터 정보 저장을 취소하시겠습니까?</string>

    <string name="center_name">센터명</string>
    <string name="center_name_hint">센터명을 입력해주세요.</string>
    <string name="wrong_center_name">센터명을 입력해주세요.</string>
    <string name="center_phone_number">센터 연락처</string>
    <string name="wrong_phone_number">센터 연락처를 올바르게 입력해주세요.</string>
    <string name="wrong_phone_number_warning">영수증 발송 시 문자 제목과 발송연락처로\n사용되오니 정확하게 입력해주세요.</string>

    <string name="cancel_receipt_send">영수증 발송을 취소하시겠습니까?</string>
    <string name="ok_receipt_send">영수증을 발송하시겠습니까?</string>
    <string name="receipt_send_success">영수증이 발송 되었습니다.</string>

    <string name="warning">경고</string>
    <string name="single_launch_warning">GYMMANAGER 영수증은 단독으로 실행할 수 없습니다.</string>

    <string name="finish_app">GYMMANAGER 영수증을 종료합니다.</string>
    
    <string name="error_occured">에러가 발생하였습니다.</string>
</resources>
