<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundGrey"
    tools:context="com.tobcross.gymmanagerreceipt.ui.MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <com.beardedhen.androidbootstrap.BootstrapWell
        android:id="@+id/main_footer_ly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_margin="@dimen/normal_item_margin"
        app:bootstrapSize="xl">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/normal_item_margin">

                <com.beardedhen.androidbootstrap.AwesomeTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/very_samll_text_size"
                    app:bootstrapBrand="success"
                    app:fontAwesomeIcon="fa_circle" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/send_receipt_via_sms"
                    android:textColor="@color/textBlack"
                    android:textSize="@dimen/normal_text_size"
                    android:textStyle="bold" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_item_height"
                android:layout_marginTop="@dimen/small_item_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/main_phone_tv"
                    android:layout_width="@dimen/default_label_witdh"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/mobile_phone_number"
                    android:textSize="@dimen/samll_text_size" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/normal_item_margin"
                    android:descendantFocusability="beforeDescendants"
                    android:focusableInTouchMode="true"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/main_phone_digit_first_sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/normal_item_margin"
                        android:layout_weight="1"
                        android:entries="@array/phone_first_digit_array" />

                    <com.beardedhen.androidbootstrap.BootstrapEditText
                        android:id="@+id/main_phone_digit_middle_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:imeOptions="actionNext"
                        android:inputType="phone"
                        android:maxLength="4"
                        android:maxLines="1"
                        android:nextFocusRight="@+id/main_phone_digit_last_et"
                        app:bootstrapBrand="info"
                        app:bootstrapSize="lg"
                        app:roundedCorners="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/normal_item_margin"
                        android:layout_marginRight="@dimen/normal_item_margin"
                        android:text="@string/dash"
                        android:textSize="@dimen/samll_text_size" />

                    <com.beardedhen.androidbootstrap.BootstrapEditText
                        android:id="@+id/main_phone_digit_last_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:imeOptions="actionDone"
                        android:inputType="phone"
                        android:maxLength="4"
                        android:maxLines="1"
                        app:bootstrapBrand="info"
                        app:bootstrapSize="lg"
                        app:roundedCorners="true" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_item_margin"
                android:orientation="horizontal">

                <com.beardedhen.androidbootstrap.BootstrapButton
                    android:id="@+id/main_ok_btn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/default_item_height"
                    android:layout_marginLeft="@dimen/small_item_margin"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:text="@string/ok"
                    android:textSize="@dimen/normal_text_size"
                    app:bootstrapBrand="success"
                    app:bootstrapSize="lg"
                    app:roundedCorners="true" />

                <View
                    android:layout_width="@dimen/small_item_margin"
                    android:layout_height="@dimen/default_item_height" />

                <com.beardedhen.androidbootstrap.BootstrapButton
                    android:id="@+id/main_cancel_btn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/default_item_height"
                    android:layout_marginRight="@dimen/small_item_margin"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:text="@string/cancel"
                    android:textSize="@dimen/normal_text_size"
                    app:bootstrapBrand="warning"
                    app:bootstrapSize="lg"
                    app:roundedCorners="true" />

            </LinearLayout>

        </LinearLayout>

    </com.beardedhen.androidbootstrap.BootstrapWell>

    <com.beardedhen.androidbootstrap.BootstrapWell
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/main_footer_ly"
        android:layout_below="@+id/toolbar"
        android:layout_gravity="center"
        android:layout_margin="@dimen/normal_item_margin"
        app:bootstrapSize="xl">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/main_receipt_content_ry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/normal_item_margin">

                <com.beardedhen.androidbootstrap.AwesomeTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/very_samll_text_size"
                    app:bootstrapBrand="success"
                    app:fontAwesomeIcon="fa_circle" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/issued_receipt"
                    android:textColor="@color/textBlack"
                    android:textSize="@dimen/normal_text_size"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_below="@id/main_receipt_content_ry"
                android:background="@color/backgroundGrey"
                android:padding="@dimen/line_height">

                <TextView
                    android:id="@+id/main_receipt_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@color/transparentBlack"
                    android:gravity="center"
                    android:padding="@dimen/small_item_margin"
                    android:text="@string/no_issued_receipt"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/samll_text_size" />

                <ImageView
                    android:id="@+id/main_receipt_iv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true" />


            </RelativeLayout>

        </RelativeLayout>

    </com.beardedhen.androidbootstrap.BootstrapWell>


</RelativeLayout>
